# Producer-san3

./: .env.example  .gitignore  GITHUB_SETUP.sh  LICENSE  README.md  SAN3 Producer.bat  app.py  main.py  push.bat  pyproject.toml  requirements.txt  smoke_test.py
modes/: 808_dial.py  beat_block.py  drum_build.py  drum_gen.py  generator.py  melody_gen.py  midi_gen.py  mix_chain.py  pattern_catalog.py
outputs/: pattern_catalog.json
